--- a/src/index.css
+++ b/src/index.css
@@ -8,17 +8,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #1e3563;
 }
-
-.tab-list > span {
-  padding: 5px 8px;
-  border: 1px solid #282c34;
-  border-radius: 10px;
-  margin-right: 5px;
-  cursor: pointer;
-}
-.tab-list > span.active {
-  background-color: #282c34;
-  color: #ffffff;
+.navbar {
+  min-height: 80px;
+  margin-bottom: 30px;
 }
 .add-item-button {
   padding-bottom: 20px;
